refactor: add Constants, small refactor